--- a/extension/trunk/source/com/bedrock/extension/view/misc/HierarchyControlBar.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/misc/HierarchyControlBar.mxml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:ControlBar xmlns:mx="http://www.adobe.com/2006/mxml" width="100%">
+<mx:ControlBar xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="35" verticalAlign="middle">
 	<mx:Script>
 		<![CDATA[
+			import com.bedrock.framework.core.dispatcher.BedrockDispatcher;
 			import com.bedrock.extension.controller.ProjectController;
 			import com.bedrock.extension.event.ExtensionEvent;
 			
+			[Bindable]
+			public var creationOptions:Array;
+			[Embed("assets/CreateIcon.png")]
+            private var CreateIcon:Class;
 			[Embed("assets/DeleteIcon.png")]
             private var DeleteIcon:Class;
              [Embed("assets/DeselectIcon.png")]
@@ -14,20 +19,29 @@
             [Embed("assets/SaveIcon.png")]
             private var SaveIcon:Class;
             
-			private function notify( $event:String ):void
+			private function _notify( $event:String ):void
 			{
 				this.dispatchEvent( new ExtensionEvent( $event, this ) );
+			}
+			private function _reloadConfig():void
+			{
+				BedrockDispatcher.dispatchEvent( new ExtensionEvent( ExtensionEvent.RELOAD_CONFIG, this ) );
 			}
 			
 		]]>
 	</mx:Script>
 	
 	<mx:Metadata>
+        [Event(name="createNode", type="com.bedrock.extension.event.ExtensionEvent")]
         [Event(name="deselectNode", type="com.bedrock.extension.event.ExtensionEvent")]
         [Event(name="deleteNode", type="com.bedrock.extension.event.ExtensionEvent")]
     </mx:Metadata>
-	<mx:Button click="ProjectController.getInstance().config.saveConfig()" id="saveConfigButton" icon="{ SaveIcon }" toolTip="Save Config"/>
-	<mx:Button click="ProjectController.getInstance().config.loadConfig()" id="refreshConfigButton" icon="{ RefreshIcon }" toolTip="Reload Config"/>
-	<mx:Button click="this.notify( 'deselectNode' )" id="nodeDeselectButton" icon="{ DeselectIcon }" toolTip="Deselect"/>
-	<mx:Button click="this.notify( 'deleteNode' )" id="nodeDeleteButton" icon="{ DeleteIcon }" toolTip="Delete"/>
+    <mx:Button click="ProjectController.getInstance().config.saveConfig()" id="saveConfigButton" icon="{ SaveIcon }" toolTip="Save Config"/>
+	<mx:Button click="this._reloadConfig()" id="refreshConfigButton" icon="{ RefreshIcon }" toolTip="Reload Config"/>
+	<mx:Button click="this._notify( 'deselectNode' )" id="nodeDeselectButton" icon="{ DeselectIcon }" toolTip="Deselect"/>
+	<mx:Spacer width="100%"/>
+    <mx:ComboBox id="creationCombo" dataProvider="{ this.creationOptions }" />
+	<mx:Button click="this._notify( 'createNode' )" id="nodeCreateButton" icon="{ CreateIcon }" toolTip="Create"/>
+    <mx:VRule height="100%"/>
+	<mx:Button click="this._notify( 'deleteNode' )" id="nodeDeleteButton" icon="{ DeleteIcon }" toolTip="Delete"/>
 </mx:ControlBar>
