--- a/extension/trunk/source/com/bedrock/extension/view/popups/ExtensionSettingsView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/popups/ExtensionSettingsView.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%"  horizontalAlign="center">
+<GenericExtensionPopupView xmlns="com.bedrock.extension.view.popups.*" xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" xmlns:misc="com.bedrock.extension.view.misc.*">
 	<mx:Script>
 		<![CDATA[
 			import com.bedrock.extension.controller.ExtensionController;
@@ -54,13 +54,9 @@
 				switch ( $event.detail ) {
 					case Alert.OK :
 						ExtensionController.getInstance().createSettings();
-						this._closePopup();
+						this.closePopup();
 						break;
 				}
-			}
-			private function _closePopup():void
-			{
-				PopUpManager.removePopUp( this );
 			}
 		]]>
 	</mx:Script>
@@ -88,9 +84,9 @@
 		<mx:ControlBar >
 			<mx:Button label="Clear Settings" height="35" click="this._clearSettings()"/>
 			<mx:Spacer width="100%"/>
-			<mx:Button label="Done" height="35" click="this._closePopup()"/>
+			<mx:Button label="Done" height="35" click="this.closePopup()"/>
 		</mx:ControlBar>
 		
 	</mx:Panel>
 	
-</mx:VBox>
+</GenericExtensionPopupView>
