--- a/extension/trunk/source/com/bedrock/extension/view/popups/ProjectCreationView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/popups/ProjectCreationView.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Box xmlns:mx="http://www.adobe.com/2006/mxml" horizontalAlign="center" width="100%" height="100%" xmlns:view="com.bedrock.extension.view.*" >
+<GenericExtensionPopupView xmlns="com.bedrock.extension.view.popups.*" xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" xmlns:misc="com.bedrock.extension.view.misc.*">
 	<mx:Script>
 		<![CDATA[
 			import com.bedrock.extension.event.ExtensionEvent;
@@ -76,7 +76,7 @@
 			{
 				if ( ExtensionController.getInstance().generateProject() ) {
 					Alert.show( "Project creation complete!", "Attention!" );
-					this._closePopup();
+					this.closePopup();
 				} else {
 					Alert.show( "Project creation fail!\nMissing parameters!", "Error!" );
 				}
@@ -87,10 +87,6 @@
             private function _onPopulate( $event:ExtensionEvent ):void
 			{
 				this.populate();
-			}
-			private function _closePopup():void
-			{
-				PopUpManager.removePopUp( this );
 			}
 		]]>
 	</mx:Script>
@@ -170,10 +166,10 @@
 		</mx:VBox>
 		
 		<mx:ControlBar>
-			<mx:Button label="Cancel" id="cancelUpdateButton" click="this._closePopup()" height="30" />
+			<mx:Button label="Cancel" id="cancelUpdateButton" click="this.closePopup()" height="30" />
 			<mx:Spacer width="100%"/>
 			<mx:Button label="Generate Project" id="generateProjectButton" click="this.generateProject()" height="30"/>
 		</mx:ControlBar>
 	</mx:Panel>
 		
-</mx:Box>
+</GenericExtensionPopupView>
