--- a/extension/trunk/source/com/bedrock/extension/view/project/ProjectView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/project/ProjectView.mxml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" horizontalAlign="center" xmlns:temp="com.bedrock.extension.project.view.temp.*" xmlns:extras="com.bedrock.extension.project.view.extras.*" xmlns:project="com.bedrock.extension.view.project.*">
+<mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml" initialize="this.bootup()" width="100%" height="100%" horizontalAlign="center" xmlns:temp="com.bedrock.extension.project.view.temp.*" xmlns:extras="com.bedrock.extension.project.view.extras.*" xmlns:project="com.bedrock.extension.view.project.*">
 	<mx:Script>
 		<![CDATA[
 			import com.bedrock.extension.controller.ProjectController;
 			import com.bedrock.extras.util.VariableUtil;
+			
+			private function bootup():void
+			{
+				ProjectController.getInstance().setup( this );
+			}
 			
 			private function publishShell():void
 			{
@@ -20,10 +25,11 @@
 	<mx:TabNavigator width="100%" height="100%" id="projectTabNavigation">
 		<project:BrowserView label="Browser" />
 		<project:SettingsView label="Settings" />
-		<project:LocalesView label="Locales" />
-		<project:ContainersView label="Containers" />
 		<project:ContentsView label="Contents" />
-		<project:EnvironmentsView label="Environment" />
+		<project:AssetsView label="Assets" />
+		<project:ContainersView label="Containers" />
+		<project:LocalesView label="Locales" />
+		<project:EnvironmentsView label="Environments" />
 	</mx:TabNavigator>
 	
 	<mx:HBox width="100%" height="40">
